[package]
name = "c2kr"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.1"

[dependencies.sdl2]
version = "0.35.0"
default-features = false
features = ["image"]
